# tainan-tudigong

./: .env.example  .gitignore  README.md  netlify.toml  start.ps1
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README.zh-TW.md  conftest.py  netlify.toml  project_overview.html  pyproject.toml  start.ps1  start_railway.sh
backend/apps/: __init__.py
backend/deg/: __init__.py  contracts_frontend.py  fortune_lots.py
backend/dijizu_agent_new/: 五條港里.json  光賢里.json  兌悅里.json  南廠里.json  南美里.json  南門里.json  城隍里.json  大涼里.json  小西門里.json  府前里.json  永華里.json  法華里.json  淺草里.json  藥王里.json  西和里_new.json  西湖里.json  西賢里.json  赤嵌里.json  郡王里.json  開山里.json
backend/docs/: a2ui-contract.md  explore-demo-transcript.json
backend/scripts/: agent_editor.html  agent_editor.py  agent_generator.html  agent_names.txt  demo.py  smoke_council.py  smoke_refine.py  update_boundaries.py  vill_names.json
backend/tests/: __init__.py  test_a2ui_builder.py  test_a2ui_surfaces.py  test_a2ui_wish_surfaces.py  test_adapters.py  test_clarification_feature.py  test_contracts.py  test_contracts_frontend.py  test_council_agents.py  test_council_schemas.py  test_dijizhu_a2a_server.py  test_dijizhu_community.py  test_dijizhu_evidence_integration.py  test_dijizhu_integration.py  test_explore_session.py  test_frontend_endpoints.py  test_gateway.py  test_gateway_a2ui_integration.py  test_gateway_integration.py  test_gateway_wish.py  test_geo.py  test_m8_polish.py  test_mcp_spatial_db.py  test_seed_loader.py  test_tudigong_integration.py  test_tudigong_remote_integration.py  (+6 more)
(+122 files in other folders)
